--- a/index.html
+++ b/index.html
@@ -195,21 +195,21 @@
         <div class="card">
           <img src="images/portfolio-1.jpg" alt="" />
           <div class="info">
-            <h3>Product </h3>
+            <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
         </div>
         <div class="card">
           <img src="images/portfolio-2.jpg" alt="" />
           <div class="info">
-            <h3>Product</h3>
+            <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
         </div>
         <div class="card">
           <img src="images/portfolio-3.jpg" alt="" />
           <div class="info">
-            <h3>Product</h3>
+            <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
         </div>
