--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <!-- Start Portfolio -->
   <div class="portfolio" id="portfolio">
     <div class="container">
-      <h2 class="special-heading">Products</h2>
+      <h2 class="special-heading">Portfolio</h2>
       <p>If you do it right, it will last forever.</p>
       <div class="portfolio-content">
         <div class="card">
