--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="landing">
     <div class="intro-text">
       <h1>House</h1>
-      <p>We are Leon- Super Creative & Minimal Agency Web Template</p>
+      <p>We are Super - House  Creative & Minimal Agency Web Template</p>
     </div>
   </div>
   <!-- End Landing Section -->
