--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House Company</title>
-    <link rel="icon" href="images/icon.png" >
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="icon" href="images/icon.png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;700&display=swap" /> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;700&display=swap"> 
 </head>
 <body>
   <!-- Start Header --> 
@@ -127,7 +127,7 @@
         </div>
         <div class="col">
           <div class="image image-column">
-            <img src="images/services.jpg" alt="" />
+            <img src="images/services.jpg" alt="img">
           </div>
         </div>
       </div>
@@ -141,42 +141,42 @@
       <p>If you do it right, it will last forever.</p>
       <div class="prodcut-content">
         <div class="card">
-          <img src="images/product01.jpg" alt="" />
+          <img src="images/product01.jpg" alt="img">
           <div class="info">
             <h3>Product </h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
         </div>
         <div class="card">
-          <img src="images/product02.jpg" alt="" />
+          <img src="images/product02.jpg" alt="img">
           <div class="info">
             <h3>Product</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
         </div>
         <div class="card">
-          <img src="images/product03.jpg" alt="" />
+          <img src="images/product03.jpg" alt="img">
           <div class="info">
             <h3>Product</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
         </div>
         <div class="card">
-          <img src="images/product04.jpg" alt="" />
+          <img src="images/product04.jpg" alt="img">
           <div class="info">
             <h3>Product</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
         </div>
         <div class="card">
-          <img src="images/product05.jpg" alt="" />
+          <img src="images/product05.jpg" alt="img">
           <div class="info">
             <h3>Product</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
         </div>
         <div class="card">
-          <img src="images/product06.jpg" alt="" />
+          <img src="images/product06.jpg" alt="img">
           <div class="info">
             <h3>Product</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
@@ -193,21 +193,21 @@
       <p>If you do it right, it will last forever.</p>
       <div class="portfolio-content">
         <div class="card">
-          <img src="images/portfolio-1.jpg" alt="" />
+          <img src="images/portfolio-1.jpg" alt="img">
           <div class="info">
             <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
         </div>
         <div class="card">
-          <img src="images/portfolio-2.jpg" alt="" />
+          <img src="images/portfolio-2.jpg" alt="img">
           <div class="info">
             <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
         </div>
         <div class="card">
-          <img src="images/portfolio-3.jpg" alt="" />
+          <img src="images/portfolio-3.jpg" alt="img">
           <div class="info">
             <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
@@ -224,14 +224,14 @@
       <p>Less is more work</p>
       <div class="about-content">
         <div class="image">
-          <img src="images/about.jpg" alt="" />
+          <img src="images/about.jpg" alt="img">
         </div>
         <div class="text">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora velit cum non,
             fuga vitae architecto delectus sed maxime rerum impedit aliquam obcaecati, aut excepturi iusto laudantium!
           </p>
-          <hr />
+          <hr>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sapiente. Velit iure exercitationem
             dolores nesciunt dolore. Eum officiis dolorum hic voluptate quaerat minima, similique inventore esse,
